Save model in data dir

--- a/notebooks/2025-05-09_replenishment_env.ipynb
+++ b/notebooks/2025-05-09_replenishment_env.ipynb
@@ -26,7 +26,8 @@
    "source": [
     "from stable_baselines3 import PPO\n",
     "from stable_baselines3.common.env_util import make_vec_env\n",
-    "import gymnasium as gym"
+    "import gymnasium as gym\n",
+    "import reinforced_replenishment.envs.replenishment_env"
    ]
   },
   {
@@ -49,7 +50,7 @@
     "model.learn(total_timesteps=10000)\n",
     "\n",
     "# Save the model\n",
-    "model.save(\"ppo_replenishment\")"
+    "model.save(\"../data/06_models/ppo_replenishment\")"
    ]
   },
   {
