--- a/notebooks/2025-05-09_replenishment_env.ipynb
+++ b/notebooks/2025-05-09_replenishment_env.ipynb
@@ -60,18 +60,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the trained model\n",
-    "model = PPO.load(\"ppo_replenishment\")\n",
-    "\n",
     "# Test the agent\n",
     "env = gym.make('ReplenishmentEnv-v0')\n",
+    "env = env.unwrapped  # Access the underlying custom environment\n",
     "obs, _ = env.reset()  # Extract the observation from the tuple\n",
+    "\n",
+    "# Initialize storage for observations\n",
+    "inventory_history = []\n",
+    "forecast_next_period = []  # Store only the first entry of the forecast\n",
+    "\n",
+    "# Run the simulation\n",
     "for _ in range(100):\n",
     "    action, _ = model.predict(obs)  # Pass only the observation to predict()\n",
     "    obs, reward, terminated, truncated, info = env.step(action)  # Updated to handle terminated and truncated\n",
-    "    env.render()\n",
+    "\n",
+    "    # Save the current state\n",
+    "    inventory_history.append(env.inventory)\n",
+    "    forecast_next_period.append(env.forecast[0])  # Save only the first forecasted demand\n",
+    "\n",
     "    if terminated or truncated:  # End the loop if the episode is over\n",
     "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.graph_objects as go\n",
+    "# Create an interactive plot with plotly\n",
+    "fig = go.Figure()\n",
+    "\n",
+    "# Add inventory line\n",
+    "fig.add_trace(go.Scatter(\n",
+    "    x=list(range(len(inventory_history))),\n",
+    "    y=inventory_history,\n",
+    "    mode='lines+markers',\n",
+    "    name='Inventory',\n",
+    "    line=dict(color='red', dash='dash'),\n",
+    "    marker=dict(size=6)\n",
+    "))\n",
+    "\n",
+    "# Add forecast line\n",
+    "fig.add_trace(go.Scatter(\n",
+    "    x=list(range(len(forecast_next_period))),\n",
+    "    y=forecast_next_period,\n",
+    "    mode='lines+markers',\n",
+    "    name='Forecast (Next Period)',\n",
+    "    line=dict(color='blue'),\n",
+    "    marker=dict(size=6)\n",
+    "))\n",
+    "\n",
+    "# Customize layout\n",
+    "fig.update_layout(\n",
+    "    title=\"Replenishment Environment State Over Time\",\n",
+    "    xaxis_title=\"Time Steps\",\n",
+    "    yaxis_title=\"Units\",\n",
+    "    legend=dict(x=0, y=1),\n",
+    "    template=\"plotly_white\"\n",
+    ")\n",
+    "\n",
+    "# Show the interactive plot\n",
+    "fig.show()"
    ]
   }
  ],
