First model that learns (comprises inventory, backorder, revenue, intermittend demand, no lead time, no MOQ)

--- a/notebooks/2025-05-09_replenishment_env.ipynb
+++ b/notebooks/2025-05-09_replenishment_env.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "load_dotenv(\"../conf/local/.env\", override=True)\n",
     "\n",
-    "%load_ext kedro.ipython\n",
+    "%reload_ext kedro.ipython\n",
     "\n",
     "\n",
     "%reload_kedro"
@@ -38,16 +38,21 @@
    "outputs": [],
    "source": [
     "# Create the environment\n",
-    "env = gym.make('ReplenishmentEnv-v0')\n",
+    "env = gym.make('ReplenishmentEnv-v0',\n",
+    "               max_steps=100,\n",
+    "               forecast_horizon=1,\n",
+    "               max_order=50,\n",
+    "               demand_prob=0.3,\n",
+    "               avg_demand=10)\n",
     "\n",
     "# Set the seed during reset\n",
     "env.reset(seed=42)\n",
     "\n",
     "# Initialize the PPO agent\n",
-    "model = PPO(\"MlpPolicy\", env, verbose=1)\n",
+    "model = PPO(\"MlpPolicy\", env, verbose=0)\n",
     "\n",
     "# Train the agent\n",
-    "model.learn(total_timesteps=10000)\n",
+    "model.learn(total_timesteps=2e6, progress_bar=True)\n",
     "\n",
     "# Save the model\n",
     "model.save(\"../data/06_models/ppo_replenishment\")"
@@ -61,22 +66,25 @@
    "outputs": [],
    "source": [
     "# Test the agent\n",
-    "env = gym.make('ReplenishmentEnv-v0')\n",
-    "env = env.unwrapped  # Access the underlying custom environment\n",
-    "obs, _ = env.reset()  # Extract the observation from the tuple\n",
-    "\n",
+    "obs, _ = env.reset()\n",
+    "env.render()\n",
     "# Initialize storage for observations\n",
-    "inventory_history = []\n",
-    "forecast_next_period = []  # Store only the first entry of the forecast\n",
+    "inventory_history = [0]\n",
+    "forecast_next_period = [obs[0]]\n",
+    "reward_history = [0]\n",
+    "action_history = [None]\n",
+    "backorder_history = [0]\n",
     "\n",
     "# Run the simulation\n",
     "for _ in range(100):\n",
-    "    action, _ = model.predict(obs)  # Pass only the observation to predict()\n",
+    "    action, _ = model.predict(obs)\n",
     "    obs, reward, terminated, truncated, info = env.step(action)  # Updated to handle terminated and truncated\n",
-    "\n",
-    "    # Save the current state\n",
-    "    inventory_history.append(env.inventory)\n",
-    "    forecast_next_period.append(env.forecast[0])  # Save only the first forecasted demand\n",
+    "    env.render()\n",
+    "    inventory_history.append(env.unwrapped.inventory)\n",
+    "    forecast_next_period.append(env.unwrapped.forecast[0])  # Save only the first forecasted demand\n",
+    "    reward_history.append(reward)  # Save the reward\n",
+    "    action_history.append(action)  # Save the action\n",
+    "    backorder_history.append(env.unwrapped.backorder)\n",
     "\n",
     "    if terminated or truncated:  # End the loop if the episode is over\n",
     "        break"
@@ -89,7 +97,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plot the results\n",
     "import plotly.graph_objects as go\n",
+    "\n",
     "# Create an interactive plot with plotly\n",
     "fig = go.Figure()\n",
     "\n",
@@ -97,28 +107,59 @@
     "fig.add_trace(go.Scatter(\n",
     "    x=list(range(len(inventory_history))),\n",
     "    y=inventory_history,\n",
-    "    mode='lines+markers',\n",
+    "    mode='lines',  # Remove markers (dots) by using 'lines' only\n",
     "    name='Inventory',\n",
-    "    line=dict(color='red', dash='dash'),\n",
-    "    marker=dict(size=6)\n",
+    "    line=dict(color='red', dash='dash')  # Dashed red line\n",
     "))\n",
     "\n",
     "# Add forecast line\n",
     "fig.add_trace(go.Scatter(\n",
     "    x=list(range(len(forecast_next_period))),\n",
     "    y=forecast_next_period,\n",
-    "    mode='lines+markers',\n",
+    "    mode='lines',  # Remove markers (dots) by using 'lines' only\n",
     "    name='Forecast (Next Period)',\n",
-    "    line=dict(color='blue'),\n",
-    "    marker=dict(size=6)\n",
+    "    line=dict(color='blue')  # Solid blue line\n",
+    "))\n",
+    "\n",
+    "# Add action line\n",
+    "fig.add_trace(go.Scatter(\n",
+    "    x=list(range(len(action_history))),\n",
+    "    y=action_history,\n",
+    "    mode='lines',  # Remove markers (dots) by using 'lines' only\n",
+    "    name='Action',\n",
+    "    line=dict(color='purple')  # Solid purple line\n",
+    "))\n",
+    "\n",
+    "# Add backorder line\n",
+    "fig.add_trace(go.Scatter(\n",
+    "    x=list(range(len(backorder_history))),\n",
+    "    y=backorder_history,\n",
+    "    mode='lines',  # Remove markers (dots) by using 'lines' only\n",
+    "    name='Backorder',\n",
+    "    line=dict(color='orange', dash='dot')  # Dotted orange line\n",
+    "))\n",
+    "\n",
+    "# Add reward line on secondary y-axis\n",
+    "fig.add_trace(go.Scatter(\n",
+    "    x=list(range(len(reward_history))),\n",
+    "    y=reward_history,\n",
+    "    mode='lines',  # Remove markers (dots) by using 'lines' only\n",
+    "    name='Reward',\n",
+    "    line=dict(color='green'),  # Solid green line\n",
+    "    yaxis='y2'  # Specify secondary y-axis\n",
     "))\n",
     "\n",
     "# Customize layout\n",
     "fig.update_layout(\n",
     "    title=\"Replenishment Environment State Over Time\",\n",
     "    xaxis_title=\"Time Steps\",\n",
-    "    yaxis_title=\"Units\",\n",
-    "    legend=dict(x=0, y=1),\n",
+    "    yaxis_title=\"Units / Actions\",\n",
+    "    yaxis2=dict(\n",
+    "        title=\"Reward\",  # Title for secondary y-axis\n",
+    "        overlaying='y',  # Overlay on the same plot\n",
+    "        side='right'  # Place on the right side\n",
+    "    ),\n",
+    "    legend=dict(x=1, y=1.5, xanchor='right', yanchor='top'),  # Move legend outside the plot\n",
     "    template=\"plotly_white\"\n",
     ")\n",
     "\n",
