Implemented progress, plot callback and saved model, code & plot to folder

--- a/notebooks/2025-05-09_replenishment_env.ipynb
+++ b/notebooks/2025-05-09_replenishment_env.ipynb
@@ -27,7 +27,8 @@
     "from stable_baselines3 import PPO\n",
     "from stable_baselines3.common.env_util import make_vec_env\n",
     "import gymnasium as gym\n",
-    "import reinforced_replenishment.envs.replenishment_env"
+    "import reinforced_replenishment.envs.replenishment_env\n",
+    "from reinforced_replenishment.callbacks.reward_logging_callback import PlotLoggingCallback"
    ]
   },
   {
@@ -40,22 +41,19 @@
     "# Create the environment\n",
     "env = gym.make('ReplenishmentEnv-v0',\n",
     "               max_steps=100,\n",
-    "               forecast_horizon=1,\n",
+    "               forecast_horizon=10,\n",
     "               max_order=50,\n",
     "               demand_prob=0.3,\n",
     "               avg_demand=10)\n",
     "\n",
-    "# Set the seed during reset\n",
+    "# Init agent\n",
     "env.reset(seed=42)\n",
-    "\n",
-    "# Initialize the PPO agent\n",
     "model = PPO(\"MlpPolicy\", env, verbose=0)\n",
     "\n",
-    "# Train the agent\n",
-    "model.learn(total_timesteps=2e6, progress_bar=True)\n",
-    "\n",
-    "# Save the model\n",
-    "model.save(\"../data/06_models/ppo_replenishment\")"
+    "# Fit\n",
+    "total_timesteps = int(2e6) #2e6 for good results\n",
+    "callback = PlotLoggingCallback(total_timesteps=total_timesteps)\n",
+    "model.learn(total_timesteps=total_timesteps, callback=callback)"
    ]
   },
   {
